# ansible-role-signal

./: .pre-commit-config.yaml  CONTRIBUTING.rst  README.md  README.rst  pyproject.toml
.github/workflows/: ci.yml  constraints.txt  labeler.yml  release.yml  tests.yml
defaults/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml
signal/handlers/: main.yml
signal/meta/: main.yml
signal/molecule/default/: converge.yml
signal/tasks/: main.yml
signal/vars/: main.yml
tasks/: keyring-setup.yml  main.yml
tests/: test.yml
vars/: main.yml
