[tool.poetry]
name = "ansible-role-signal"
version = "1.3.4"
description = "Ansible role to install Signal messenger."
authors = ["staticdev <staticdev-support@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
